fix minor bugs, add authentication, registration and verification

--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
@@ -17,7 +17,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let dailyReports of dailyReport">
+                <tr *ngFor="let dailyReports of dailyReports">
                     <td>{{dailyReports.reportNumber}}</td>
                     <td>{{dailyReports.drafted}}</td>
                     <td></td>
