--- a/Budfirmex/src/app/buildings/components/building-details/building-details.component.html
+++ b/Budfirmex/src/app/buildings/components/building-details/building-details.component.html
@@ -6,23 +6,23 @@
     </div>
     <div class="col-md-2">
       <div class="building-details__label--small">Nazwa drogi</div>
-      <div class="building-details__value--small">{{ roadName }}</div>
+      <div class="building-details__value--small">{{ roadName || '-' }}</div>
     </div>
     <div class="col-md-2">
       <div class="building-details__label--small">Planowana data rozpoczęcia</div>
-      <div class="building-details__value--small">{{ plannedDateOfStart | date}}</div>
+      <div class="building-details__value--small">{{ (plannedDateOfStart | date) || '-'}}</div>
     </div>
     <div class="col-md-2">
       <div class="building-details__label--small">Faktyczna data rozpoczęcia</div>
-      <div class="building-details__value--small">{{ actualDateofStart | date}}</div>
+      <div class="building-details__value--small">{{ (actualDateofStart | date) || '-'}}</div>
     </div>
     <div class="col-md-2">
       <div class="building-details__label--small">Planowana data zakończenia</div>
-      <div class="building-details__value--small">{{ plannedDateOfEnd | date}}</div>
+      <div class="building-details__value--small">{{ (plannedDateOfEnd | date) || '-'}}</div>
     </div>
     <div class="col-md-2">
       <div class="building-details__label--small">Faktyczna data zakończenia</div>
-      <div class="building-details__value--small">{{ actualDateOfEnd | date}}</div>
+      <div class="building-details__value--small">{{ (actualDateOfEnd | date) || '-'}}</div>
     </div>
   </div>
 </div>
