--- a/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-12">
-          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
+<!--          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>-->
         </div>
       </div>
 
