new structure, interfaces and first repositories

--- a/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/brigade-reports/brigade-reports.component.html
@@ -17,10 +17,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let dailyReports of dailyReports">
-                    <td>{{dailyReports.reportNumber}}</td>
+                <tr *ngFor="let brigadeReport of brigadeReports">
+                    <!-- <td>{{dailyReports.reportNumber}}</td>
                     <td>{{dailyReports.drafted}}</td>
-                    <td></td>
+                    <td></td> -->
                 </tr>
             </tbody>
         </table>
