--- a/Budfirmex/src/app/buildings/components/comments/comments.component.html
+++ b/Budfirmex/src/app/buildings/components/comments/comments.component.html
@@ -12,10 +12,10 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let dailyReports of dailyReport">
-                        <td>{{dailyReports.reportNumber}}</td>
+                    <tr *ngFor="let comment of comments">
+                        <!-- <td>{{dailyReports.reportNumber}}</td>
                         <td>{{dailyReports.drafted}}</td>
-                        <td><button class="btn btn-sm btn-warning">Edytuj</button></td>
+                        <td><button class="btn btn-sm btn-warning">Edytuj</button></td> -->
                     </tr>
                 </tbody>
             </table>
