--- a/Budfirmex/src/app/buildings/components/equipment-daily-reports/equipment-daily-reports.component.html
+++ b/Budfirmex/src/app/buildings/components/equipment-daily-reports/equipment-daily-reports.component.html
@@ -17,10 +17,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let dailyReports of dailyReport">
-                    <td>{{dailyReports.reportNumber}}</td>
+                <tr *ngFor="let equipmentDailyReport of equipmentDailyReports">
+                    <!-- <td>{{dailyReports.reportNumber}}</td>
                     <td>{{dailyReports.drafted}}</td>
-                    <td></td>
+                    <td></td> -->
                 </tr>
             </tbody>
         </table>
