--- a/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row my-3">
         <div class="col-4">
-            <app-workers></app-workers>
+            <app-workers [workCards]="workCards"></app-workers>
         </div>
         <div class="col-4">
             <app-works></app-works>
