--- a/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
+++ b/Budfirmex/src/app/dashboard/pages/dashboard/dashboard.component.html
@@ -1,2 +1,4 @@
 <app-user-details></app-user-details>
-<app-my-buildings></app-my-buildings>
+<app-my-buildings
+  [buildings]="buildings">
+</app-my-buildings>
