--- a/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
+++ b/Budfirmex/src/app/buildings/pages/brigade-report/brigade-report.component.html
@@ -2,7 +2,7 @@
 
     <div class="row">
         <div class="col-12">
-<!--          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>-->
+          <app-breadcrumbs [breadcrumbs]="breadcrumbs"></app-breadcrumbs>
         </div>
       </div>
 
@@ -16,10 +16,10 @@
             <app-workers [workCards]="workCards"></app-workers>
         </div>
         <div class="col-4">
-            <app-works></app-works>
+            <app-done-works [doneWorks]="doneWorks"></app-done-works>
         </div>
         <div class="col-4">
-            <app-stuff></app-stuff>
+            <app-materials-used [materialsUsed]="materialsUsed"></app-materials-used>
         </div>
     </div>
 </div>
